Closed Bug 538338 Opened 14 years ago Closed 14 years ago

Do not hang on FPE_INTDIV "Integer divide by zero"

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

Attachments

(1 file, 1 obsolete file)

967 bytes, patch
benjamin
: review+
Details | Diff | Splinter Review
In Bug 533035, we added fpehandler.
Therefore if our code caused a FPE_INTDIV, it will hang.

I think it would be better if this situation is handled by crashreporter.
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #420509 - Flags: review?(benjamin)
Comment on attachment 420509 [details] [diff] [review]
patch

raise() doesn't actually trigger crashreporter on mac. We should call NS_DebugBreak(NS_DEBUG_ABORT) here to make sure that we get a truly aborting behavior.
Attachment #420509 - Flags: review?(benjamin) → review-
Attached patch patchSplinter Review
Attachment #420509 - Attachment is obsolete: true
Attachment #420701 - Flags: review?(benjamin)
Comment on attachment 420701 [details] [diff] [review]
patch

>diff --git a/toolkit/xre/nsSigHandlers.cpp b/toolkit/xre/nsSigHandlers.cpp

>+    NS_DebugBreak(NS_DEBUG_ABORT, nsnull, nsnull, __FILE__, __LINE__);

Make this NS_DebugBreak(NS_DEBUG_ABORT, "Divide by zero", nsnull, __FILE__, __LINE__);

and r=me
Attachment #420701 - Flags: review?(benjamin) → review+
http://hg.mozilla.org/mozilla-central/rev/876262d3038b
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: