Bug 538338 Do not hang on FPE_INTDIV "Integer divide by zero" r=bsmedberg